--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body>
     <h1>Hello to Git Course</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa sed temporibus. Illum ea quae ipsa tempore natus ab placeat dicta expedita nobis eaque! Asperiores natus adipisci quisquam similique veritatis.</p>
+    <form>
+        <label>Name:</label>
+        <input type="text" />
+    </form>
 </body>
 </html>
